making resume look nice

--- a/Resume.html
+++ b/Resume.html
@@ -39,100 +39,107 @@
             <li><a href="index.html">This Is Peyton</a></li>
             <li class="active"><a href="#">Resume</a></li>
             <li><a href="EnergyFlows.html">Research: Energy Flows</a></li>
-            <li><a href="#">A One Page Wonder</a></li>
-            <li><a href="MultiItemPage.html">Small Projects</a></li>
+            <li><a href="#">Service Learning: Developing Software for America Scores</a></li>
+            <li><a href="MultiItemPage.html">Other Projects</a></li>
           </ul>
         </div>
         <div id="panel">
           <div class="content">
-            <div class="container-fluid">
-    <section role="main" class="container_16 clearfix">
-      <div class="grid_16">
-        <!-- About Me -->
-        <div class="grid_8 about">
-          <h3>About Me</h3>
-          <p>Cette section vous sert de présentation.</p>
-          <p>Pellentesque nec nisi at sapien sagittis sagittis. Aliquam eu
-            condimentum mauris. Proin accumsan enim at risus hendrerit lobortis.
-            Nunc sollicitudin sodales lectus, et rhoncus mi molestie hendrerit.
-            Vestibulum velit lorem, rhoncus a congue ultricies, faucibus facilisis
-            risus. Mauris turpis ante, aliquet ac venenatis at, ornare ut velit.
-            Duis ut erat neque, eget consectetur tellus. </p>
-          </div>
+            <div class="container-fluid resume">
+              <!-- Education -->
+              <div class="col-sm-10 col-sm-offset-1 col-xs-12 education">
+                <h2>Education</h2>
+                <ul>
+                  <li>
+                    <h4><strong>Candidate for Bachelor of Science in Computer Science with Interactive Media minor </strong><br>College of Computer and Information Science, Northeastern University</h4>
+                    <span class="location">Boston, Massachusetts, United States of America</span>
+                    <span class="dates">May 2019</span>
+                    <p>Honors: GPA 3.78/4.0, Dean's List, Honors Student <br>Relevant Coursework: Algorithms and Data, Database Design, Software Development, Special Topics: Information Visualization</p>
+                  </li>
+                </ul>
+              </div>
 
-          <!-- Skills -->
-          <div class="grid_8 skills">
-            <h3>Skills</h3>
-            <ul class="bar">
-              <li data-skills="80">Skill 1<span style="width: 80%;"></span></li>
-              <li data-skills="60">Skill 2<span style="width: 60%;"></span></li>
-              <li data-skills="75">Skill 3<span style="width: 75%;"></span></li>
-              <li data-skills="40">Skill 4<span style="width: 40%;"></span></li>
-              <li data-skills="95">Skill 5<span style="width: 95%;"></span></li>
-            </ul>
-          </div>
-        </div>
+              <!-- Skills -->
+              <div class="col-sm-10 col-sm-offset-1 col-xs-12 skills">
+                <h2>Skills</h2>
+                <div class="col-xs-12 col-sm-offset-1 col-sm-5">
+                  <ul class="bar">
+                    <li>Python<span style="width: 80%;"></span></li>
+                    <li>Java<span style="width: 75%;"></span></li> 
+                    <li>CSS<span style="width: 70%;"></span></li>
+                    <li>HTML<span style="width: 70%;"></span></li>
+                    <li>Javascript<span style="width: 60%;"></span></li>
+                  </ul>
+                </div>
+                <div class="col-xs-12 col-sm-5">
+                  <ul class="bar">
+                    <li data-skills="95">JIRA<span style="width: 75%;"></span></li>
+                    <li data-skills="95">Git<span style="width: 70%;"></span></li>
+                    <li data-skills="95">Tortoise SVN<span style="width: 60%;"></span></li>
+                    <li data-skills="40">Adobe Creative Suite<span style="width: 40%;"></span></li>
+                    <li data-skills="95">Eclipse<span style="width: 50%;"></span></li>
+                    <li data-skills="95">Intellij<span style="width: 40%;"></span></li>
+                  </ul>
+                </div>
+              </div>
 
-        <!-- Experience -->
-        <div class="grid_16 experiences">
-          <h3>Experience</h3>
-          <ul>
-            <li>
-              <h4><strong>Job Name</strong> employer name</h4>
-              <span class="location">location</span>
-              <span class="dates">Dates</span>
-              <p>Job Description</p>
-              </li>
-              <li>
-                <h4><strong>Job Name</strong> employer name</h4>
-                <span class="location">location</span>
-                <span class="dates">Dates</span>
-                <p>Job Description</p>
-                </li>
-              </ul>
-            </div>
+              <!-- Experience -->
+              <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-sm-12 experiences">
+                <h2>Experience</h2>
+                <ul>
+                  <li>
+                    <h4><strong>CCIS Fellow</strong> Northeastern University</h4>
+                    <span class="location">Boston, Massachusetts</span>
+                    <span class="dates">September - December 2016</span>
+                    <p>
+                    <br>
+                    Train and mentor students applying for their first co-op in Northeastern’s co-op prep class
+                    <br><br>
+                    Lead resume reviews, behavioral and technical interview workshops, and on-site company visits
+                    <br><br>
+                    Facilitate discussions on professionalism on the job search and in the workplace
+                    </p>
+                  </li>
+                  <li>
+                    <h4><strong>Co-op Programmer</strong> MEDITECH</h4>
+                    <span class="location">Westwood, Massachusetts</span>
+                    <span class="dates">January - August 2016</span>
+                    <p><br>
+                    Refactored hard-coded file paths to a method-generated system in order to simplify future updates in the codebase
+                    <br><br>
+                    Identified, researched, and corrected bugs and feature deficiencies, reducing the task backlog by 30%
+                    <br><br>
+                    Improved functionality of a web-based electronic health record system by working with designers to implement changes recommended by use</p>
+                  </li>
+                  <li>
+                    <h4><strong>Research Assistant </strong> Northeastern University</h4>
+                    <span class="location">Boston, MA</span>
+                    <span class="dates">May - July 2015</span>
+                    <p><br>
+                    Developed interactive display of Northeastern University’s power usage in Java
+                    <br><br>
+                    Analysed data for trends in building use, academic calendar, weather conditions and twitter data to be worked into the visualization
+                    <br><br>
+                    Project was displayed on campus to bring awareness to the energy usage and to facilitate identification of areas to increase efficiency</p>
+                  </li>
+                </ul>
+              </div>
 
-            <!-- Education -->
-            <div class="grid_16 education">
-              <h3>Education</h3>
-              <ul>
-                <li>
-                  <h4><strong>Degree</strong> School name</h4>
-                  <span class="location">location</span>
-                  <span class="dates">Timespand</span>
-                  <p>Degree/school addt'l info.</p>
-                </li>
-                <li>
-                  <h4><strong>Degree</strong> School name</h4>
-                  <span class="location">location</span>
-                  <span class="dates">Timespand</span>
-                  <p>Degree/school addt'l info.</p>
-                </li>
-              </ul>
-            </div>
+              <!-- hobbies -->
+              <div class=" col-xs-12 col-sm-offset-1 col-sm-5 hobbies">
+                <h2>Hobbies</h2>
+                <ul>
+                <il><p><strong>Associations:</strong> Beta Theta Pi, Northeastern ACM</p></il>
+                <il><p><strong>Interests:</strong> Music, Guitar, Film, Data Visualization</p></il>
+                </ul>
+              </div>
 
-            <!-- hobbies -->
-            <div class="grid_8 hobbies">
-              <h3>hobbies</h3>
-              <p><strong>Sports :</strong> if you play</p>
-              <p><strong>Association :</strong> if you're a member of one</p>
-              <p>cont.</p>
-            </div>
-
-            <!-- Contact -->
-            <div class="grid_8 contact">
-              <h3>Contact</h3>
-              <p>Talk to me:</p>
-              <ul>
-                <li class="location">Boston, Massachussetts</li>
-                <li class="phone">860-918-6790</li>
-                <li class="mail"><a href="mailto:tiroffp@gmail.com">tiroffp@gmail.com</a></li>
-                <li class="linkedin"><a href="http://<www.linkedin.com">linkedin</a></li>
-                <li class="form"><a class="toContactform">via le formulaire de contact</a></li>
-                <li class="form"><a class="toContactform">via le formulaire de contact</a></li>
-              </ul>
-            </div>
-          </section>
+              <!-- Contact -->
+              <div class="col-xs-12 col-sm-5 contact">
+                <h2>Contact</h2>
+                <p>#1 14 Allegheny Road, Roxbury Crossing, MA, 02120</li>
+                  <br>860-918-6790| tiroffp@gmail.com | <a href="http://www.linkedin.com">linkedin</a><p>
+              </div>
             </div>
           </div>
         </div>
@@ -148,13 +155,13 @@
       <!--My javascript-->
       <script src="js/script.js"></script>
       <script>
-    var slideout = new Slideout({
-      'panel': document.getElementById('panel'),
-      'menu': document.getElementById('menu'),
-      'padding': 256,
-      'tolerance': 70
-    });
-  </script>
+        var slideout = new Slideout({
+          'panel': document.getElementById('panel'),
+          'menu': document.getElementById('menu'),
+          'padding': 256,
+          'tolerance': 70
+        });
+      </script>
     </body>
 
     </html>
