trying and failing to make MultiItemPage.html look nice

--- a/MultiItemPage.html
+++ b/MultiItemPage.html
@@ -34,8 +34,8 @@
           <li><a href="index.html">This Is Peyton</a></li>
           <li><a href="Resume.html">Resume</a></li>
           <li><a href="EnergyFlows.html">Research: Energy Flows</a></li>
-          <li><a href="#">A One Page Wonder</a></li>
-          <li class="active"><a href="#">Small Projects</a></li>
+          <li><a href="#">Service Learning: Developing Software for America Scores</a></li>
+          <li class="active"><a href="#">Other Projects</a></li>
         </ul>
       </div>
       <div id="panel">
@@ -50,12 +50,9 @@
             </div>
             <div class="row">
               <div class="col-x-12">
-                <h2 class="text-center"><strong>Information Visualizations</strong></h2>
+                <h2 class="text-center"><strong>Other Projects </strong></h2>
               </div>
-              <div class="col-xs-8 col-xs-offset-2">
-                <p class="text-center">These are some of the visualizations in d3 I developed for my Special Topics:Information Visualization class. Most are done in d3.js. You can see my progress with the language as times goes on</p> <!--this disappears on small screens-->
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2 col-lg-3 col-lg-offset-1">
                 <div class="thumbnail">
                   <img src="static/firstchart.png" alt="My first data visualization" class="center-block img-responsive"> <!-- might make these images rectangular -->
                   <div class="caption">
@@ -64,7 +61,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="col-sm-5 col-md-4 col-lg-3">
                 <div class="thumbnail">
                   <img src="static/hw2pt2.PNG" alt="My First D3 visual" class="center-block img-responsive">
                   <div class="caption">
@@ -73,7 +70,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2 col-lg-3">
                 <div class="thumbnail">
                   <img src="http://placehold.it/240x240" alt="Relevant Image? Categorical Marking?" class="center-block img-responsive">
                   <div class="caption">
@@ -83,7 +80,7 @@
                 </div>
               </div>
               <div class="clearfix visible-md-block"></div>
-              <div class="col-sm-6 col-md-4 col-lg-3 pull-left">
+              <div class="col-sm-5 col-md-4 col-md-offset-2 col-lg-3 pull-left">
                 <div class="thumbnail">
                   <img src="static/hw2pt3.PNG" alt="Chart of car MPG based on distance traveled" class="center-block img-responsive">
                   <div class="caption">
@@ -93,7 +90,7 @@
                 </div>
               </div>
               <div class="clearfix visible-lg-block"></div>
-              <div class="col-sm-6 col-md-4 col-lg-3">
+              <div class="col-sm-5 col-sm-offset-1 col-md-offset-2 col-md-4 col-lg-3">
                 <div class="thumbnail">
                   <img src="http://placehold.it/240x240" alt="Relevant Image? Categorical Marking?" class="center-block img-responsive">
                   <div class="caption">
