changed github display spacing, removed unneeded code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
       <!--https://github.com/BlackrockDigital/startbootstrap-simple-sidebar/blob/master/index.html-->
       <div id="wrapper">
         <div id="menu">
-        <div class="flex">
           <ul class="sidebar-nav">
             <li class="active"><a href="#">This Is Peyton</a></li>
             <li><a href="Resume.html">Resume</a></li>
@@ -43,7 +42,6 @@
             <li><a href="#">Service Learning: Developing Software for America Scores</a></li>
             <li><a href="MultiItemPage.html">Other Projects</a></li>
           </ul>
-          </div>
         </div>
         <div id="panel">
           <div class="content">
@@ -53,7 +51,7 @@
                 <!-- Column containing content of tab-->
                 <div class="visible-xs-block col-xs-12 menu-pull">
                   <p>
-                    Swipe Me Please! =>
+                    Swipe Me!
                   </p>
                 </div>
               </div>
@@ -73,7 +71,7 @@
                     My name is Peyton Tiroff, and I make things (digitally, usually). I am a Northeastern Student currently getting my degree in Computer Science, with a minor in Interaction Design. I worked at Medical Information Technology in 2016 for my first co-op, and I've also done research with Professor Kristian Kloeckl on visualizing the energy usage of campus buildings. These experiences have me looking to get into web programming and finding ways to communicate advanced models and concepts to a general audience through easy to use and understand visualizations and interaction interfaces, but I also find almost all aspects of computer science interesting, and love the wide variety of fields that this study can be relevant in. Thanks for checking out my website!
                   </p>
                 </div>
-                <div id="activity" class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
+                <div id="activity" class="col-xs-offset-1 col-xs-10">
                   <h3 class="text-center"> Github Activity </h3>
                   <div id="feed"></div>
                 </div>
