--- a/EnergyFlows.html
+++ b/EnergyFlows.html
@@ -45,7 +45,7 @@
               <div class="row">
                 <div class="visible-xs-block col-xs-12 menu-pull">
                   <p>
-                    Swipe Me! =>
+                    Swipe Me!
                   </p>
                 </div>
               </div>
