--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li class="active"><a href="#">This Is Peyton</a></li>
             <li><a href="Resume.html">Resume</a></li>
             <li><a href="EnergyFlows.html">Research: Energy Flows</a></li>
-            <li><a href="#">Service Learning: Developing Software for America Scores</a></li>
+            <li><a href="ServiceLearning.html">Service Learning: America Scores</a></li>
             <li><a href="MultiItemPage.html">Other Projects</a></li>
           </ul>
         </div>
