--- a/Resume.html
+++ b/Resume.html
@@ -39,7 +39,7 @@
             <li><a href="index.html">This Is Peyton</a></li>
             <li class="active"><a href="#">Resume</a></li>
             <li><a href="EnergyFlows.html">Research: Energy Flows</a></li>
-            <li><a href="#">Service Learning: Developing Software for America Scores</a></li>
+            <li><a href="ServiceLearning.html">Service Learning: America Scores</a></li>
             <li><a href="MultiItemPage.html">Other Projects</a></li>
           </ul>
         </div>
@@ -65,7 +65,7 @@
                 <div class="col-xs-12 col-sm-offset-1 col-sm-5">
                   <ul class="bar">
                     <li>Python<span style="width: 80%;"></span></li>
-                    <li>Java<span style="width: 75%;"></span></li> 
+                    <li>Java<span style="width: 75%;"></span></li>
                     <li>CSS<span style="width: 70%;"></span></li>
                     <li>HTML<span style="width: 70%;"></span></li>
                     <li>Javascript<span style="width: 60%;"></span></li>
