changed name of service learning tab

--- a/EnergyFlows.html
+++ b/EnergyFlows.html
@@ -35,7 +35,7 @@
             <li><a href="index.html">This Is Peyton</a></li>
             <li><a href="Resume.html">Resume</a></li>
             <li class="active"><a href="#">Research: Energy Flows</a></li>
-            <li><a href="#">Service Learning: Developing Software for America Scores</a></li>
+            <li><a href="ServiceLearning.html">Service Learning: America Scores</a></li>
             <li><a href="MultiItemPage.html">Other Projects</a></li>
           </ul>
         </div>
