--- a/MultiItemPage.html
+++ b/MultiItemPage.html
@@ -118,6 +118,14 @@
                   <p><a href="http://www.github.com/tiroffp/tiroffp.github.io" class="btn btn-primary center-block" role="button">Repo</a> </p>
                 </div>
               </div>
+              <div class="thumbnail">
+                <img src="static/tree.PNG" class="center-block img-responsive">
+                <div class="caption">
+                  <h4>Tree</h4>
+                  <p>A basic lineage tree done in D3. Utilizes searching and mouse interaction to facilitate the exploration of a fraternity's "family tree"</p>
+                  <p><a href="http://www.github.com/tiroffp/Tree" class="btn btn-primary center-block" role="button">Repo</a> </p>
+                </div>
+              </div>
             </div>
           </div>
           <!-- Close of main row -->
