--- a/Resume.html
+++ b/Resume.html
@@ -53,8 +53,9 @@
                   <li>
                     <h4><strong>Candidate for Bachelor of Science in Computer Science with Interactive Media minor </strong><br>College of Computer and Information Science, Northeastern University</h4>
                     <span class="location">Boston, Massachusetts, United States of America</span>
-                    <span class="dates">May 2019</span>
-                    <p>Honors: GPA 3.78/4.0, Dean's List, Honors Student <br>Relevant Coursework: Algorithms and Data, Database Design, Software Development, Special Topics: Information Visualization</p>
+                    <br />
+                    <span class="dates"><em>Expected May 2019</em></span>
+                    <p>Honors: GPA 3.76/4.0, Dean's List, Honors Student <br>Relevant Coursework: Algorithms and Data, Database Design, Software Development, Special Topics: Information Visualization</p>
                   </li>
                 </ul>
               </div>
@@ -64,21 +65,17 @@
                 <h2>Skills</h2>
                 <div class="col-xs-12 col-sm-offset-1 col-sm-5">
                   <ul class="bar">
-                    <li>Python<span style="width: 80%;"></span></li>
-                    <li>Java<span style="width: 75%;"></span></li>
-                    <li>CSS<span style="width: 70%;"></span></li>
-                    <li>HTML<span style="width: 70%;"></span></li>
-                    <li>Javascript<span style="width: 60%;"></span></li>
+                    <li>Scala<span style="width: 75%;"></span></li>
+                    <li>Javascript (Angular/React)<span style="width: 70%;"></span></li>
+                    <li>Java<span style="width: 60%;"></span></li>
+                    <li>Python<span style="width: 60%;"></span></li>
                   </ul>
                 </div>
                 <div class="col-xs-12 col-sm-5">
                   <ul class="bar">
-                    <li data-skills="95">JIRA<span style="width: 75%;"></span></li>
+                      <li data-skills="95">Agile Programming<span style="width: 80%;"></span></li>
                     <li data-skills="95">Git<span style="width: 70%;"></span></li>
-                    <li data-skills="95">Tortoise SVN<span style="width: 60%;"></span></li>
                     <li data-skills="40">Adobe Creative Suite<span style="width: 40%;"></span></li>
-                    <li data-skills="95">Eclipse<span style="width: 50%;"></span></li>
-                    <li data-skills="95">Intellij<span style="width: 40%;"></span></li>
                   </ul>
                 </div>
               </div>
@@ -87,41 +84,45 @@
               <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-sm-12 experiences">
                 <h2>Experience</h2>
                 <ul>
-                  <li>
-                    <h4><strong>CCIS Fellow</strong> Northeastern University</h4>
-                    <span class="location">Boston, Massachusetts</span>
-                    <span class="dates">September - December 2016</span>
-                    <p>
-                    <br>
-                    Train and mentor students applying for their first co-op in Northeastern’s co-op prep class
-                    <br><br>
-                    Lead resume reviews, behavioral and technical interview workshops, and on-site company visits
-                    <br><br>
-                    Facilitate discussions on professionalism on the job search and in the workplace
-                    </p>
-                  </li>
-                  <li>
-                    <h4><strong>Co-op Programmer</strong> MEDITECH</h4>
-                    <span class="location">Westwood, Massachusetts</span>
-                    <span class="dates">January - August 2016</span>
-                    <p><br>
-                    Refactored hard-coded file paths to a method-generated system in order to simplify future updates in the codebase
-                    <br><br>
-                    Identified, researched, and corrected bugs and feature deficiencies, reducing the task backlog by 30%
-                    <br><br>
-                    Improved functionality of a web-based electronic health record system by working with designers to implement changes recommended by use</p>
-                  </li>
-                  <li>
-                    <h4><strong>Research Assistant </strong> Northeastern University</h4>
-                    <span class="location">Boston, MA</span>
-                    <span class="dates">May - July 2015</span>
-                    <p><br>
-                    Developed interactive display of Northeastern University’s power usage in Java
-                    <br><br>
-                    Analysed data for trends in building use, academic calendar, weather conditions and twitter data to be worked into the visualization
-                    <br><br>
-                    Project was displayed on campus to bring awareness to the energy usage and to facilitate identification of areas to increase efficiency</p>
-                  </li>
+                    <li>
+                        <h4><strong>Co-op Software Engineer </strong> TrueFit </h4>
+                        <span class="location">Woburn, MA</span>
+                        <span class="dates">Januaray - 2017</span>
+                        <p>
+                            <br>
+                            Supported a suite of internal applications managing platform authorization, data attribution, and client communications
+                            <br><br>
+                            Implemented features on both front-end user interfaces and back-end services
+                            <br><br>
+                            Designed and implemented a developer operations tool to manage deployment of new code versions to the companies various test and production environments
+                        </p>
+                    </li>
+                    <li>
+                        <h4><strong>CCIS Fellow</strong> Northeastern University</h4>
+                        <span class="location">Boston, Massachusetts</span>
+                        <span class="dates">September - December 2016</span>
+                        <p>
+                            <br>
+                            Train and mentor students applying for their first co-op in Northeastern’s co-op prep class
+                            <br><br>
+                            Lead resume reviews, behavioral and technical interview workshops, and on-site company visits
+                            <br><br>
+                            Facilitate discussions on professionalism on the job search and in the workplace
+                        </p>
+                    </li>
+                    <li>
+                        <h4><strong>Co-op Programmer</strong> MEDITECH</h4>
+                        <span class="location">Westwood, Massachusetts</span>
+                        <span class="dates">January - August 2016</span>
+                        <p>
+                            <br>
+                            Refactored hard-coded file paths to a method-generated system in order to simplify future updates in the codebase
+                            <br><br>
+                            Identified, researched, and corrected bugs and feature deficiencies, reducing the task backlog by 30%
+                            <br><br>
+                            Improved functionality of a web-based electronic health record system by working with designers to implement changes recommended by use
+                        </p>
+                    </li>
                 </ul>
               </div>
 
@@ -129,8 +130,8 @@
               <div class=" col-xs-12 col-sm-offset-1 col-sm-5 hobbies">
                 <h2>Hobbies</h2>
                 <ul>
-                <il><p><strong>Associations:</strong> Beta Theta Pi, Northeastern ACM</p></il>
-                <il><p><strong>Interests:</strong> Music, Guitar, Film, Data Visualization</p></il>
+                    <il><p><strong>Associations:</strong> Beta Theta Pi, Northeastern ACM</p></il>
+                    <il><p><strong>Interests:</strong> Music, Guitar, Film, Data Visualization</p></il>
                 </ul>
               </div>
 
@@ -147,9 +148,6 @@
       <!-- Bootstrap core JavaScript-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
-      <!-- Activity Stream-->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
-      <script src="js/github-activity-0.1.4.min.js"></script>
       <!--Slideout.js-->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/0.1.12/slideout.min.js"></script>
       <!--My javascript-->
