--- a/MultiItemPage.html
+++ b/MultiItemPage.html
@@ -119,7 +119,7 @@
                 </div>
               </div>
               <div class="thumbnail">
-                <img src="static/tree.PNG" class="center-block img-responsive">
+                <img src="static/Tree.PNG" class="center-block img-responsive">
                 <div class="caption">
                   <h4>Tree</h4>
                   <p>A basic lineage tree done in D3. Utilizes searching and mouse interaction to facilitate the exploration of a fraternity's "family tree"</p>
