updated resume & intro text

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                 <div class="spacer"></div>
                 <div id="intro-text" class="col-xs-12 col-sm-offset-1 col-sm-10  text-justify">
                   <p>
-                    Welcome to my site! I am a Northeastern Student currently getting my degree in Computer Science, with a minor in Interaction Design.
-                    I have worked for MEDITECH and TrueFit on my co-ops, and I've also worked with Professors Kristian Kloeckl and Michelle Borkin on data visualization projects.
-                    These experiences have me looking to get into web programming and finding ways to communicate advanced models and concepts to a general audience through
-                    easy to use and understand visualizations and interaction interfaces, but I also find almost all aspects of computer science interesting,
-                    and love the wide variety of fields that this study can be relevant in. Thanks for checking out my website!
+                    I am a Northeastern Student currently getting my degree in Computer Science, with a minor in Interaction Design. I have completed co-ops at two Boston-based
+                    companies, an established healthcare technology company Meditech, and a young online-retail disrupter TrueFit, and I've also worked with Professors Kristian
+                    Kloeckl and Michelle Borkin on data visualization projects. These experiences have me looking to get into web programming and finding ways to communicate advanced
+                    models and concepts to a general audience through to use and understand visualizations and interaction interfaces, but I also find almost all aspects of computer
+                    science interesting,and I love the wide variety of fields that this study can be relevant in. Thanks for checking out my website!
                   </p>
                 </div>
                 <div id="activity" class="col-xs-offset-1 col-xs-10">
