--- a/Resume.html
+++ b/Resume.html
@@ -73,8 +73,9 @@
                 </div>
                 <div class="col-xs-12 col-sm-5">
                   <ul class="bar">
+                      <li data-skills="95">Git<span style="width: 80%;"></span></li>
                       <li data-skills="95">Agile Programming<span style="width: 80%;"></span></li>
-                    <li data-skills="95">Git<span style="width: 70%;"></span></li>
+                      <li data-skills="95">GitLab/JIRA<span style="width: 70%;"></span></li>
                     <li data-skills="40">Adobe Creative Suite<span style="width: 40%;"></span></li>
                   </ul>
                 </div>
@@ -85,16 +86,16 @@
                 <h2>Experience</h2>
                 <ul>
                     <li>
-                        <h4><strong>Co-op Software Engineer </strong> TrueFit </h4>
+                        <h4><strong>Co-op Software Engineer, Internal Apps/Plaftorm Team </strong> TrueFit </h4>
                         <span class="location">Woburn, MA</span>
                         <span class="dates">Januaray - 2017</span>
                         <p>
                             <br>
-                            Supported a suite of internal applications managing platform authorization, data attribution, and client communications
+                            Designed, implemented, and deployed a operational tool to manage the deployment of new versions of client-specific code bases to various test and production environments
                             <br><br>
-                            Implemented features on both front-end user interfaces and back-end services
+                            Refactored application platform code to support internal user authentication through Active Directory server
                             <br><br>
-                            Designed and implemented a developer operations tool to manage deployment of new code versions to the companies various test and production environments
+                            Reviewed and reported on refactors neccessary to upgrade platform to Java 8
                         </p>
                     </li>
                     <li>
@@ -125,13 +126,41 @@
                     </li>
                 </ul>
               </div>
+              <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-sm-12 projects">
+                <h2>Projects</h2>
+                <ul>
+                    <il>
+                        <h4><strong>America Scores Data Collection App</strong></h4>
+                        <p>
+                            <br />
+                            Collected requirements, designed, and outlined the architecture of a fitness data collection system for the non-profit America Scores as a
+                            member of a 10 person group in a service-learning project for CS4500: Software Development
+                            <br /><br  />
+                            Built a frontend for the web applications using React.js in a smaller 4-member subgroup of the larger team, then deployed the application on AWS with a continuous-integration system using Github and TravisCI
+                            <br  /><br  />
+                            Transitioned the project to a new team the following semster
+                            <br />
+                            <br />
+                        </p>
+                    </il>
+                    <il>
+                        <h4><strong>Visualization of the Effects of the Immigration Act of 1924</strong></h4>
+                        <p>
+                            <br />
+                            Collected and cleaned data on immigration from Europe from 1930-1950 collected from U.S Census statistical reports
+                            <br /><br  />
+                            Implimented a multi-paned visualization tool in D3.js to facilitate exploration of trends in the collected data
+                        </p>
+                    </il>
+                </ul>
+            </div>
 
               <!-- hobbies -->
               <div class=" col-xs-12 col-sm-offset-1 col-sm-5 hobbies">
                 <h2>Hobbies</h2>
                 <ul>
-                    <il><p><strong>Associations:</strong> Beta Theta Pi, Northeastern ACM</p></il>
-                    <il><p><strong>Interests:</strong> Music, Guitar, Film, Data Visualization</p></il>
+                    <il><p><strong>Associations:</strong> Beta Theta Pi, Northeastern Hu-skiers and Outdoors Club, Northeastern ACM,</p></il>
+                    <il><p><strong>Interests:</strong> Rock Climbing, Music, Guitar, Film, Data Visualization</p></il>
                 </ul>
               </div>
 
@@ -139,7 +168,7 @@
               <div class="col-xs-12 col-sm-5 contact">
                 <h2>Contact</h2>
                 <p>#1 14 Allegheny Road, Roxbury Crossing, MA, 02120</li>
-                  <br>860-918-6790| tiroffp@gmail.com | <a href="http://www.linkedin.com">linkedin</a><p>
+                  <br>860-918-6790| tiroffp@gmail.com | <a href="https://www.linkedin.com/in/peyton-tiroff-ba62ab123/">linkedin</a><p>
               </div>
             </div>
           </div>
